<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <Button
        android:id="@+id/btn_ejercicio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_ejercicio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ejercicio1"
        />

    <Button
        android:id="@+id/btn_ejercicio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejercicio3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ejercicio2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>